whoami/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami-ingress
  namespace: whoami
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
    - host: whoami.mp.arpa
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name:  whoami
                port:
                  number: 80
  tls:
  - secretName: whoami-tls-secret
